--- a/src/Componentes/navstyle.css
+++ b/src/Componentes/navstyle.css
@@ -3,16 +3,13 @@
     width: 100%;
 }
 
-.nav {
-    margin-top: 0.7rem;
-}
 
 .container {
     max-width: 100%;
 }
 
 .mainLogo {
-    width: 84%;
+    width: 65%;
 }
 
 .logo {
@@ -36,7 +33,7 @@
 } 
 
 .svg-inline--fa {
-    height: 1.4em;
+    height: 1em;
 }
 
 .input-group-prepend {
@@ -51,7 +48,7 @@
 .input-group {
     border-radius: 5px;
     background-color: #EFEFEF;
-    margin-left: 0rem;
+    margin-left: -3rem;
 }
 
 .input-group>.form-control:not(:first-child) {
@@ -59,20 +56,18 @@
     border-bottom-right-radius: 5px;
     background-color: #EFEFEF;
     border-color: #EFEFEF;
+    color: #333;
+    font-size: 16px;
+    font-weight: 600;
 }
 
 svg:not(:root).svg-inline--fa {
     overflow: visible;
     color: #959595;
 } 
-
-
-.Inicio {
-    color: rgb(14, 13, 13) !important;
-}
  
 .avatar {
-    background-color: #898989;
+    background-color: #979797;
     color: #FFFFFF;
     border-radius: 33px;
     width: 25px;
@@ -81,22 +76,37 @@ svg:not(:root).svg-inline--fa {
 }
 
 .name {
+    color: #979797;
     margin-left: 31px;
     font-weight: 700;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto Oxygen-Sans", Ubuntu, Cantarell, "“Fira Sans”", "“Droid Sans”", "Helvetica Neue", Helvetica, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", メイリオ, Meiryo, "ＭＳ Ｐゴシック", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
-.Following, .Avatar, .Comment, .Bell, .Points, .Inicio {
-    color: 	#BEBEBE !important;
+.Inicio {
+    color: rgb(14, 13, 13) !important;
+    border-color: #FFFFFF !important;
+    font-weight: 700 !important;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto Oxygen-Sans", Ubuntu, Cantarell, "“Fira Sans”", "“Droid Sans”", "Helvetica Neue", Helvetica, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", メイリオ, Meiryo, "ＭＳ Ｐゴシック", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
+    border-radius: 30px !important;
+}
+
+.Inicio:hover {
+    color: rgb(14, 13, 13) !important;
+    background-color: #F2F2F2 !important;
+    border-color: #fff !important;
+}
+
+.Following, .Avatar, .Comment, .Bell, .Points {
+    color: 	#979797 !important;
     border-color: #FFFFFF !important;
     font-weight: 700 !important;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto Oxygen-Sans", Ubuntu, Cantarell, "“Fira Sans”", "“Droid Sans”", "Helvetica Neue", Helvetica, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", メイリオ, Meiryo, "ＭＳ Ｐゴシック", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
     border-radius: 30px !important;
 } 
 
-.Following:hover, .Avatar:hover, .Comment:hover, .Bell:hover, .Points:hover, .Inicio:hover {
-    color: 	#BEBEBE !important;
-    background-color: #ced4da !important;
+.Following:hover, .Avatar:hover, .Comment:hover, .Bell:hover, .Points:hover {
+    color: 	#979797 !important;
+    background-color: #F2F2F2 !important;
     border-color: #fff !important;
 }
 
@@ -104,8 +114,32 @@ svg:not(:root).svg-inline--fa {
     border: 0.5px solid rgb(236, 233, 233);;
 }
 
+p {
+    margin-left: 7px;
+}
 
+.avatar {
+    background-color: #979797;
+    color: #FFFFFF;
+    border-radius: 33px;
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    border-radius: 30px;
+}
 
+.ml-auto {
+    margin-top: 0.5rem;
+}
+
+.navbar-light .navbar-nav .nav-link {
+    color: rgba(0,0,0,.5);
+    margin-left: 0.5rem;
+}
+
+.bg-light {
+    background-color: #FFFFFF;
+}
 @media (max-width: 575.98px) { }
 
 @media (max-width: 767.98px) { }
