--- a/src/Componentes/btns.css
+++ b/src/Componentes/btns.css
@@ -1,14 +1,35 @@
 .btn_1, .btn_2, .btn_3, .btn_4, .btn_5 {
     color: #fff;
-    margin-left: 6px;
-    font-size: 14px;
-    text-align: center;
-    font-weight: 700;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto Oxygen-Sans", Ubuntu, Cantarell, "“Fira Sans”", "“Droid Sans”", "Helvetica Neue", Helvetica, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", メイリオ, Meiryo, "ＭＳ Ｐゴシック", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    height: 51px;
+    margin-left: 6px !important;
+    font-size: 14px !important;
+    text-align: center !important;
+    font-weight: 700 !important;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto Oxygen-Sans", Ubuntu, Cantarell, "“Fira Sans”", "“Droid Sans”", "Helvetica Neue", Helvetica, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", メイリオ, Meiryo, "ＭＳ Ｐゴシック", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
+    height: 51px !important;
+    border-radius: 10px !important;
 }
 
 .btn_1 {
     background-color: #ACC3E3 !important;
     border-color: #ACC3E3 !important;
+}
+
+.btn_2 {
+    background-color: #DBC5C2 !important;
+    border-color: #DBC5C2 !important; 
+}
+
+.btn_3 {
+    background-color: #8D7457 !important;
+    border-color: #8D7457 !important;  
+}
+
+.btn_4 {
+    background-color: #5D86BE !important;
+    border-color: #5D86BE !important;  
+}
+
+.btn_5 {
+    background-color: #CECDD1 !important;
+    border-color: #CECDD1 !important;  
 }
