--- a/src/Componentes/btns.css
+++ b/src/Componentes/btns.css
@@ -1,3 +1,65 @@
+.wrap{
+    position:relative;
+    width: 100%;
+    padding:10px;
+    width: 100%;
+    overflow:hidden;
+    border-left:1px solid #ccc;
+    border-right:1px solid #ccc;
+  }
+
+  .slider__row{
+    display:flex;
+    justify-content: flex-start;
+    position:relative;
+    left: 0;
+    width: auto;
+    
+    transition:.5s;
+
+  }
+  
+  .slider__btn{
+    position:absolute;
+    right: 0px;
+    top: 45%;
+    margin-top: -35px;
+    width: 70px;
+    height: 70px;
+  }
+  .slider__left{
+    left: 0px;
+  }
+
+  #btn-left {
+    width: 210px;
+    height: 100%;
+    display: flex;
+    justify-content: flex-start;
+    background-image: linear-gradient(to left, rgba(255, 255, 255, 0) 0%, rgb(255, 255, 255) 90%);
+  }
+
+  #btn-right {
+    width: 210px;
+    height: 100%;
+    display: flex;
+    justify-content: flex-end;
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgb(255, 255, 255) 90%);
+  }
+
+  #btn-left button, #btn-right button, #btn-left button:focus, #btn-right button:focus  {
+      background: transparent;
+      border-color: transparent;
+      color: #666;
+      font-size: 30px;
+      box-shadow: 0 0 0 0 !important;
+  }
+
+  #btn-left button:hover, #btn-right button:hover{
+      color: black;
+  }
+
+
 .btn_1, .btn_2, .btn_3, .btn_4, .btn_5 {
     color: #fff;
     margin-left: 6px !important;
@@ -5,13 +67,41 @@
     text-align: center !important;
     font-weight: 700 !important;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto Oxygen-Sans", Ubuntu, Cantarell, "“Fira Sans”", "“Droid Sans”", "Helvetica Neue", Helvetica, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", メイリオ, Meiryo, "ＭＳ Ｐゴシック", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
-    height: 51px !important;
+    height: 56px;
+    min-width: 84px;
     border-radius: 10px !important;
 }
 
+.btn-left {
+    background-color: transparent;
+    border: 0;
+    height: 100%;
+    outline: none;
+    padding: 0;
+    pointer-events: all;
+}
+
+.slider-arrow-right {
+    position: absolute;
+    right: 0;
+    width: 210px;
+    display: flex;
+    justify-content: flex-end;
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgb(255, 255, 255) 90%);
+
+}
+
+.slider-arrow-left {
+    position: absolute;
+    left: 0;
+    width: 210px;
+    background-image: linear-gradient(to left, rgba(255, 255, 255, 0) 0%, rgb(255, 255, 255) 90%);
+ 
+}
+
 .btn_1 {
-    background-color: #ACC3E3 !important;
-    border-color: #ACC3E3 !important;
+    text-transform: capitalize;
+    border-color: transparent !important;
 }
 
 .btn_2 {
