--- a/src/Componentes/img.scss
+++ b/src/Componentes/img.scss
@@ -1,10 +1,136 @@
+@import '../variables.scss';
+
 body {
     padding-right: 0;
 }
 
 /* Pen-specific styles */
-html, body, section {
+html, body {
   height: 100%;
+}
+
+.img-detail {
+  &-header {
+    display: grid;
+  
+    &__actions {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 1em;
+  
+      button {
+        border-radius: 30px;
+      }
+
+      .left {
+        display: flex;
+        align-items: center;
+        margin-left: -10px;
+      }
+
+      .left button {
+        border: none;
+        margin-right: 5px;
+        border-radius: 100%;
+        background: transparent !important;
+
+        svg {
+          font-size: 20px;
+          color: #333;
+        }
+
+        &:first-child {
+          padding: 12px 13px 10px;
+        }
+
+        &:nth-child(2) {
+          padding: 7px 12px 8px;
+        }
+
+        &:hover {
+          background: rgb(241, 241, 241) !important;
+        }
+      }
+  
+      .right button {
+        border: none;
+        font-weight: 600;
+        background: $main-color;
+        padding: 10px 14px;
+        min-width: 100px;
+      }
+    }
+  
+    &__website a {
+      color: #333;
+      text-decoration: underline;
+
+      &:hover {
+        color: #333;
+      }
+    }
+  }
+
+  &-headline {
+    margin-top: 15px;
+
+    h1 {
+      font-weight: 700;
+
+      &::first-letter {
+        text-transform: uppercase;
+      }
+    }
+  }
+
+  &-user {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .left {
+      display: flex;
+
+      img {
+        width: 40px;
+        border-radius: 100%;
+        margin-right: 10px;
+      }
+
+      .user-description {
+        display: grid;
+
+        a {
+          color: #333;
+    
+          &:hover {
+            color: #333;
+            text-decoration: underline;
+          }
+        }
+      }
+    }
+
+    .right button {
+      border-radius: 40px;
+      background: #efefef;
+      font-weight: 600;
+      color: rgb(27, 27, 27);
+      border: none;
+      min-width: 60px;
+      min-height: 48px;
+      padding-left: 16px;
+      padding-right: 16px;
+      padding-bottom: 12px;
+      padding-top: 12px;
+
+      &:hover {
+        filter: brightness(0.9);
+      }
+    }
+  }
 }
 
 #fl {
@@ -27,22 +153,13 @@ html, body, section {
   padding: 1rem;
 }
 
-.left {
-    padding: 1em;
-    text-align: left;
-}
-
-.right {
-    padding: 1em;
-    text-align: right;    
-}
-
 .parent {
     display: flex;
     margin: 1em 0;
     align-items: center;
     flex: 1;
 }
+
 
 #parent2, ._l {
     flex-grow: 1;
@@ -63,16 +180,17 @@ html, body, section {
 .imgs {
     cursor: zoom-in;
     display: inline-block;
-    margin: 0 0 1em;
+    margin: 0 0 5px;
     width: 100%; 
     border-radius: 25px;
     filter: none;
     -webkit-filter: grayscale(0);
 }
 
-.imgs:hover {
-    filter: grayscale(0.6);
-    -webkit-filter: grayscale(0.6);
+.imgs img {
+  width: 100%;
+  height: 100%;
+  border-radius: 25px;
 }
 
 .imgs {
@@ -93,17 +211,21 @@ html, body, section {
     left: 50%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
     cursor: zoom-in;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(1, 1fr);
     grid-gap: 10px;
     justify-content: space-between;
-  }
-  .middle footer {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    background: #0000001f;
+    border-radius: 25px;
+
+    footer {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
   }
 
   footer span {
@@ -166,6 +288,38 @@ html, body, section {
  
   .bkgr_img {
     position: relative;
+    margin-bottom: 2em;
+
+    strong {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      box-orient: vertical;
+      line-height: 1.3;
+      font-size: 14px;
+      padding-left: 7px;
+      /* autoprefixer: off */
+      -webkit-box-orient: vertical;
+      /* autoprefixer: on */
+      display: block;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      cursor: zoom-in;
+    }
+
+    .reactions {
+      font-size: 13px;
+      padding-left: 7px;
+      cursor: zoom-in;
+
+      svg {
+        color: rgb(212, 72, 16);
+      }
+    }
   }
 
   
@@ -175,20 +329,21 @@ html, body, section {
 
 .modal-body {
     position: relative;
-    flex: 1 1 auto;
+    flex: none !important;
     background-color: #FFFFFF;
     padding: 3rem 3rem 3rem 3rem;
     margin-left: 13rem;
     margin-right: 13rem;
-    border-radius: 11px;
-    margin-top: -3rem;
+    border-radius: 35px;
+    margin-top: -2rem;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 20px 0px;
 }
 
 .modal-content {
     height: auto;
     min-height: 100%;
-    background-color: #EEEEEE !important;
-    border: 1px solid #EEEEEE !important;
+    background-color: #ffffff !important;
+    border: 1px solid #ffffff !important;
     border-radius: 0 !important;
 }
 
@@ -210,15 +365,15 @@ html, body, section {
 }
 
 .btn_back {
-    background-color: transparent !important;
-    border-color: transparent !important;
-    font-size: 17px !important;
-    color: #333 !important;
-    text-align: left !important;
-    font-weight: 700 !important;
-    line-height: 1.2 !important;
-    letter-spacing: -.4px !important;
-    border-radius: 20px !important;
+  background-color: transparent !important;
+  border-color: transparent !important;
+  font-size: 18px !important;
+  color: rgb(24, 23, 23) !important;
+  text-align: left !important;
+  font-weight: 700 !important;
+  line-height: 1.2 !important;
+  letter-spacing: -.4px !important;
+  border-radius: 20px !important;
 }
 
 .btn_back:hover {
@@ -244,10 +399,6 @@ html, body, section {
     border-color: #E2E2E2 !important;
 }
 
-.modal-header {
-    border-bottom: 1px solid #EEEEEE !important; 
-}
-
 .btn-danger {
     color: #FFFFFF;
     background-color: #BD081C !important;
@@ -270,11 +421,6 @@ html, body, section {
 .btn_puntos:hover {
     background-color: transparent;
     border-color: transparent;
-}
-
-.ellip_color {
-    color: #8E8E8E !important;
-    font-size: 21px;
 }
 
 .form-inline .form-control {
@@ -333,3 +479,34 @@ svg.svg-inline--fa.fa-upload.fa-w-16 {
 .container {
     max-width: 1400px;
 }}
+
+
+.footer-buttons {
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  display: grid;
+
+  button {
+    margin-bottom: 10px;
+    border-radius: 100%;
+    border: none;
+    background: #fff !important;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 0px 0px, rgba(0, 0, 0, 0.04) 0px 0px 0px 0.5px;
+
+    svg {
+      color: #0e0e0e !important;
+    }
+  }
+}
+
+.more-images {
+  text-align: center;
+  padding: 2em;
+
+  h2 {
+    font-size: 20px;
+    font-weight: 700;
+    color: #111111;
+  }
+}
