--- a/src/Componentes/img.scss
+++ b/src/Componentes/img.scss
@@ -167,22 +167,40 @@ html, body {
 
 .img {
     margin-top: 2em;
-    column-count: 5;
+    /*column-count: 5;
     column-gap: 1em;
-    column-fill: initial;
+    column-fill: initial;*/
     margin-left: auto;
     margin-right: auto;
     width: 1260px;
+    display: grid;
+   grid-gap: 10px;
+   grid-template-columns: repeat(auto-fill, minmax(200px,1fr));
+   grid-auto-rows: 250px;
+
+   @media screen and (min-width: 500px) {
+    grid-template-columns: repeat(auto-fill, minmax(333px,1fr));
+   }
+
+   @media screen and (min-width: 700px) {
+    grid-template-columns: repeat(auto-fill, minmax(250px,1fr));
+   }
+
+   @media screen and (min-width: 990px) {
+    grid-template-columns: repeat(auto-fill, minmax(225px,1fr));
+   }
 }
 
-
+#image-detail {
+  text-align: left;
+}
 
 .imgs {
     cursor: zoom-in;
     display: inline-block;
     margin: 0 0 5px;
     width: 100%; 
-    border-radius: 25px;
+    border-radius: 16px;
     filter: none;
     -webkit-filter: grayscale(0);
 }
@@ -190,7 +208,8 @@ html, body {
 .imgs img {
   width: 100%;
   height: 100%;
-  border-radius: 25px;
+  border-radius: 16px;
+  object-fit: cover;
 }
 
 .imgs {
@@ -225,6 +244,11 @@ html, body {
       display: flex;
       align-items: center;
       justify-content: space-between;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      padding: 10px 20px;
     }
   }
 
@@ -266,6 +290,16 @@ html, body {
     height: min-content;
   }
 
+  footer a {
+    width: 60%;
+  } 
+
+  a {
+    &:hover {
+      text-decoration: none !important;
+    }
+  }
+
   footer button, footer a {
     font-weight: 700 !important;
     background: rgba(238, 238, 238, 0.938) !important;
@@ -289,6 +323,7 @@ html, body {
   .bkgr_img {
     position: relative;
     margin-bottom: 2em;
+    padding: 3px;
 
     strong {
       overflow: hidden;
